--- a/xmonad/history
+++ b/xmonad/history
@@ -1,1 +1,1 @@
-fromList [("File: ",["tmp/pcipower.txt","","","tmp/pcipower.txt","/home/es/tmp/pcipower.txt"]),("Subject: ",["test 9","test","test out","pci file","test"]),("To: ",["es@ethanschoonover.com","es@ethanschoonover.com","es@ethanschoonover.com","es@ethanschoonover.com","es@ethanschoonover.com"])]
+fromList [("File: ",["tmp/pcipower.txt","","","tmp/pcipower.txt","/home/es/tmp/pcipower.txt"]),("Go to window: ",["vmxbmnq (1280\215\&800) - chromium [2]","xmonad.hs.orig (~/etc/xmonad) - vim [1]","xmonad contrib - google search - chromium [1]","xmonad contrib - google search - chromium [2]","es@tau:~ [1]","xmonad.prompt - chromium [2]","1","xmonad.prompt - chromium [2]","xmonad.prompt - chromium [2]","es@tau:~ [1]","xmonad.prompt - chromium [1]","es@tau:~ [2]","talking points memo | breaking news and analysis | tpm - chromium [3]","new tab - chromium [3]","new tab - chromium [3]","ethan schoonover mail - inbox (2,198) - es@ethanschoonover.com - chromium [3]","xmonad.prompt.window - chromium [1]","xmonad.hs (~/etc/xmonad) - vim [2]"]),("Subject: ",["test 9","test","test out","pci file","test"]),("To: ",["es@ethanschoonover.com","es@ethanschoonover.com","es@ethanschoonover.com","es@ethanschoonover.com","es@ethanschoonover.com"])]
